@startuml
namespace jobblett.json {
    class JobShiftSerializer {
        +serialize(): void
    }
    class GroupListSerializer {
        +serialize(GroupList, JsonGenerator, SerializerProvider): void
    }
    class MainSerializer {
        +serialize(Main, JsonGenerator, SerializerProvider): void
    }
    class GroupListDeserializer {
        +deserialize(JsonNode, Main): GroupList
        +deserialize(JsonParser, DeserializationContext): GroupList
    }
    class JSONSerialize {
        +JSONSerialize(Object, String)
        +exportJSON(): void
        {static} +main(String[]): void
    }
    class GroupSerializer {
        +serialize(Group, JsonGenerator, SerializerProvider): void
    }
    class JobShiftListSerializer {
        +serialize(JobShiftList, JsonGenerator, SerializerProvider): void
    }
    class MainDeserializer {
        +deserialize(JsonNode): Main
        +deserialize(JsonParser, DeserializationContext): Main
    }
    class JSONDeserialize {
        +- -importJSON- -(): Main
    }
    class UserListDeserializer {
        +deserialize(JsonNode): UserList
        +deserialize(JsonParser, DeserializationContext): UserList
    }
    class JobShiftDeserializer {
        +deserialize(JsonNode): JobShift
        +deserialize(JsonParser, DeserializationContext): JobShift
    }
    class UserDeserializer {
        +deserialize(JsonNode): User
        +deserialize(JsonParser, DeserializationContext): User
    }
    class UserSerializer {
        +serialize(User, JsonGenerator, SerializerProvider): void
    }
    class UserListSerializer {
        +serialize(UserList, JsonGenerator, SerializerProvider): void
    }
    class CoreModule
    class GroupDeserializer {
        +deserialize(JsonNode): Group
        +deserialize(JsonParser, DeserializationContext): Group
    }
    class JobShiftListDeserializer {
        +deserialize(JsonNode): JobShiftList
        +deserialize(JsonParser, DeserializationContext): JobShiftList
    }

    MainSerializer -[hidden]down-|>GroupListSerializer
    GroupListSerializer -[hidden]down-|>JobShiftListSerializer
    JobShiftListSerializer -[hidden]down-|>UserListSerializer
    UserListSerializer -[hidden]down-|>JobShiftSerializer
    JobShiftSerializer -[hidden]down-|>GroupSerializer
    GroupSerializer -[hidden]down-|>UserSerializer

    MainDeserializer -[hidden]down-|>GroupListDeserializer
    GroupListDeserializer -[hidden]down-|>JobShiftListDeserializer
    JobShiftListDeserializer -[hidden]down-|>UserListDeserializer
    UserListDeserializer -[hidden]down-|>JobShiftDeserializer
    JobShiftDeserializer -[hidden]down-|>GroupDeserializer
    GroupDeserializer -[hidden]down-|>UserDeserializer

    CoreModule -[hidden]down-|> JSONSerialize
    JSONSerialize -[hidden]down-|> JSONDeserialize
    
    com.fasterxml.jackson.databind.module.SimpleModule -[hidden]right-> MainDeserializer


    com.fasterxml.jackson.databind.ser.std.StdSerializer <|-right- JobShiftSerializer
    com.fasterxml.jackson.databind.ser.std.StdSerializer <|-right- GroupListSerializer
    com.fasterxml.jackson.databind.ser.std.StdSerializer <|-right- MainSerializer
    com.fasterxml.jackson.databind.deser.std.StdDeserializer <|-left- GroupListDeserializer
    com.fasterxml.jackson.databind.ser.std.StdSerializer <|-right- GroupSerializer
    com.fasterxml.jackson.databind.ser.std.StdSerializer <|-right- JobShiftListSerializer
    com.fasterxml.jackson.databind.deser.std.StdDeserializer <|-left- MainDeserializer
    com.fasterxml.jackson.databind.deser.std.StdDeserializer <|-left- UserListDeserializer
    com.fasterxml.jackson.databind.JsonDeserializer <|-- JobShiftDeserializer
    com.fasterxml.jackson.databind.JsonDeserializer <|-- UserDeserializer
    com.fasterxml.jackson.databind.ser.std.StdSerializer <|-right- UserSerializer
    com.fasterxml.jackson.databind.ser.std.StdSerializer <|-right- UserListSerializer
    com.fasterxml.jackson.databind.module.SimpleModule <|-left- CoreModule
    com.fasterxml.jackson.databind.deser.std.StdDeserializer <|-left- GroupDeserializer
    com.fasterxml.jackson.databind.deser.std.StdDeserializer <|-left- JobShiftListDeserializer
    
}
namespace com.fasterxml.jackson.databind.ser.std {
    abstract class StdSerializer<T> {
        #_handledType: Class<T>
        {abstract} +serialize(T, JsonGenerator, SerializerProvider): void
    }
}
namespace com.fasterxml.jackson.databind.deser.std {
    abstract class StdDeserializer<T> {
        {static} #F_MASK_INT_COERCIONS: int
        {static} #F_MASK_ACCEPT_ARRAYS: int
        #_valueClass: Class<?>
        #_valueType: JavaType
    }
}
namespace com.fasterxml.jackson.databind {
    abstract class JsonDeserializer<T> {
        {abstract} +deserialize(JsonParser, DeserializationContext): T
    }
}
namespace com.fasterxml.jackson.databind.module {
    class SimpleModule {
        #_name: String
        #_version: Version
        #_serializers: SimpleSerializers
        #_deserializers: SimpleDeserializers
        #_keySerializers: SimpleSerializers
        #_keyDeserializers: SimpleKeyDeserializers
        #_abstractTypes: SimpleAbstractTypeResolver
        #_valueInstantiators: SimpleValueInstantiators
        #_deserializerModifier: BeanDeserializerModifier
        #_serializerModifier: BeanSerializerModifier
        #_mixins: HashMap<Class<?>, Class<?>>
        #_subtypes: LinkedHashSet<NamedType>
        #_namingStrategy: PropertyNamingStrategy
    }
}
@enduml